tests/machine/x/pascal/closure.error
line: 0
error: fpc error: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /workspace/mochi/tests/machine/x/pascal/closure.pas
closure.pas(15,13) Error: Identifier not found "_lambda0"
closure.pas(21,17) Error: Identifier not found "n"
closure.pas(26,27) Fatal: Syntax error, ":" expected but ")" found
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode

